# workos-python

./: .gitignore  .oagen-manifest.json  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CODEOWNERS  ENT-3983-phase1.md  ENT-3983-python.md  ENT-3983.md  LICENSE  README.md  changes.md  codecov.yml  context7.json  devbox.json  mypy.ini  noxfile.py  pyproject.toml  pyrightconfig.json  release-please-config.json  renovate.json  requirements-dev.txt  requirements.txt  setup.py  test_requirements.txt
.changelog-pending/: 2026-05-26T13-24-07-b0eb6fb50f020df713d0233e344a6be05739f59e.md  2026-06-03T19-20-22-dee95fc33c4f813ac60adfa8c57d210db8183dd8.md  2026-06-17T20-55-56-0e1c039566c6e6c4061925ea050b1bf288163094.md  2026-06-25T13-51-10-75604c7277a4d4f18269108cf038ab394ee25402.md  2026-06-25T20-30-47-053f61e91f935b7602605a97e69c6db058ecabed.md  2026-06-30T19-54-28-3c3685bab553edbe5f45b99d4f4d4e7ef625be2c.md  2026-07-01T16-28-56-6557d444e056592bfe49fb14edac2dd1b9729c41.md  2026-07-01T18-19-26-704603f99d7258ac681b157d7c84bbefc43529ae.md
.claude/: settings.local.json
.cursor/commands/: commit.md  format.md  new-branch.md  review-pr.md
.cursor/rules/: .gitignore  create-data-migration.mdc
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  coana-analysis.yml  coana-guardrail.yml  django.yml  docs.yml  lint-pr-title.yml  lint.yml  release-please.yml  release.yml  version-bump.yml
.semaphore/: publish.yml  semaphore.yml
ci/python-3_8/: devbox.json
ci/python-3_9/: devbox.json
docs/: V6_MIGRATION_GUIDE.md
scripts/: build_and_upload_dist.sh  ci  docs-serve.sh  docs.sh  setup.sh  test.sh
src/workos/: __init__.py  _base_client.py  _client.py  _client_configuration.py  _errors.py  _pagination.py  _types.py  actions.py  api_keys.py  async_client.py  audit_logs.py  authorization.py  client.py  connect.py  directory_sync.py  exceptions.py  feature_flags.py  fga.py  mfa.py  organizations.py  passwordless.py  pipes.py  pkce.py  portal.py  public_client.py  session.py  sso.py  user_management.py  vault.py  widgets.py
tests/: conftest.py  generated_helpers.py  smoke_test.py  test_actions.py  test_admin_portal.py  test_admin_portal_models_round_trip.py  test_api_keys.py  test_application_client_secrets.py  test_applications.py  test_async_events.py  test_async_http_client.py  test_audit_log.py  test_audit_logs.py  test_audit_logs_models_round_trip.py  test_audit_trail.py  test_authorization.py  test_authorization_check.py  test_authorization_models_round_trip.py  test_authorization_resource.py  test_authorization_resource_crud.py  test_authorization_resource_external_id.py  test_authorization_resource_memberships.py  test_authorization_role_assignments.py  test_authorization_types.py  test_client.py  test_client_api.py  test_common_models_round_trip.py  test_connect.py  test_connect_models_round_trip.py  test_connections.py  test_directories.py  test_directory_groups.py  test_directory_sync.py  test_directory_users.py  test_events.py  test_feature_flags.py  test_feature_flags_targets.py  test_fga.py  test_generated_client.py  test_groups.py  (+50 more)
tests/fixtures/: api_key_revoked.json  api_key_validation_response.json  audit_log_event.json  audit_log_event_ingestion.json  audit_log_export_creation.json  authenticate_response.json  authorization_code_session_authenticate_request.json  authorized_connect_application_list_data.json  create_user.json  dsync_deactivated.json  dsync_group_user_added.json  dsync_group_user_removed.json  dsync_user_created.json  dsync_user_deleted.json  dsync_user_updated.json  email_change.json  email_change_confirmation.json  email_change_confirmation_user.json  event.json  generate_link.json  invitation_accepted.json  invitation_created.json  invitation_resent.json  (+38 more)
workos/: __about__.py  __init__ .py  __init__.py  _base_client.py  _client_configuration.py  api_keys.py  async_client.py  audit_log.py  audit_logs.py  audit_trail.py  authorization.py  client.py  constants.py  directory_sync.py  events.py  exceptions.py  fga.py  mfa.py  organization_domains.py  organizations.py  passwordless.py  portal.py  session.py  sso.py  user_management.py  users.py  vault.py  webhooks.py
(+1752 files in other folders)
