[project]
name = "workos"
version = "5.46.0"
description = "WorkOS Python Client"
readme = "README.md"
license = "MIT"
authors = [{ name = "WorkOS", email = "team@workos.com" }]
requires-python = ">=3.10"

dependencies = [
  "cryptography>=44.0.2",
  "httpx~=0.28.1",
  "pydantic>=2.10.4",
  "pyjwt>=2.12.0",
]

[project.urls]
Homepage = "https://workos.com/docs/sdks/python"
Documentation = "https://workos.com/docs/reference"
Changelog = "https://workos.com/docs/sdks/python"

[dependency-groups]
dev = [
  { include-group = "test" },
  { include-group = "lint" },
  { include-group = "type_check" },
  { include-group = "nox" },
  "pyright>=1.1.408",
]
test = ["pytest~=8.3", "pytest-asyncio~=1.3", "pytest-cov~=7.0", "pytest-httpx~=0.35.0"]
lint = ["ruff==0.14.5"]
type_check = ["pyright~=1.1"]
nox = ["nox~=2026.2", "nox-uv~=0.7"]


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401", "F403"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.uv.build-backend]
source-include = ["py.typed"]
source-exclude = ["tests*"]

[tool.pyright]
typeCheckingMode = "strict"
include = ["workos"]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
