[project]
name = "workos"
version = "6.0.3"
description = "WorkOS Python Client"
readme = "README.md"
license = "MIT"
authors = [{ name = "WorkOS", email = "sdk@workos.com" }]
requires-python = ">=3.10"

dependencies = [
  "cryptography~=46.0",
  "httpx~=0.28",
  "pyjwt~=2.12",
  "typing_extensions~=4.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://workos.com/docs/sdks/python"
Documentation = "https://workos.com/docs/reference"
Changelog = "https://workos.com/docs/sdks/python"

[dependency-groups]
dev = [
  { include-group = "test" },
  { include-group = "lint" },
  { include-group = "type_check" },
  { include-group = "nox" },
  "pyright~=1.1",
]
test = [
  "pytest~=9.0",
  "pytest-asyncio~=1.3",
  "pytest-cov~=7.1",
  "pytest-httpx~=0.36",
]
lint = ["ruff~=0.15"]
type_check = ["pyright~=1.1"]
nox = ["nox~=2026.2", "nox-uv~=0.7"]


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401", "F403"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.uv.build-backend]
source-include = ["py.typed"]
source-exclude = ["tests*"]

[tool.pyright]
typeCheckingMode = "strict"
include = ["workos"]

[build-system]
requires = ["uv_build~=0.11"]
build-backend = "uv_build"
